--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.register.RegisterActivity">
 
 
-    <com.example.hektagramstory.customview.CustomEditText
+    <EditText
         android:id="@+id/edtName"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.example.hektagramstory.customview.CustomEditText
+    <com.example.hektagramstory.customview.EmailEditText
         android:id="@+id/edtEmail"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -35,9 +35,9 @@
         android:paddingLeft="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtDesc" />
+        app:layout_constraintTop_toBottomOf="@+id/edtName" />
 
-    <com.example.hektagramstory.customview.CustomEditText
+    <com.example.hektagramstory.customview.PasswordEditText
         android:id="@+id/edtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
