--- a/app/src/main/res/layout/item_shimmer_home.xml
+++ b/app/src/main/res/layout/item_shimmer_home.xml
@@ -18,13 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="80dp"
                 android:layout_marginBottom="8dp"
                 android:background="@color/gray"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -35,7 +35,7 @@
 
             <TextView
                 android:layout_width="160dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:background="@color/gray"
                 android:fontFamily="@font/poppins"
                 android:textColor="@color/bg_border_input"
@@ -47,9 +47,10 @@
             <ImageView
                 android:id="@+id/iv_poster"
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_height="220dp"
                 android:background="@color/gray"
                 android:layout_marginTop="8dp"
+                android:contentDescription="@string/preview_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvDesc"
