--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,15 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="blue">#38b6ff</color>
+    <color name="black2e2e">#2E2E2E</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg_cream">#FFEBDACC</color>
+    <color name="green">#00BF63</color>
     <color name="bg_input">#F0F0F0</color>
     <color name="bg_border_input">#C0C0C0</color>
     <color name="gray">#D3D3D3</color>
+    <color name="bg_splash">#EBDACC</color>
+
 
 </resources>
